<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        app:key="version"
        app:title="@string/version_title"
        />
    <Preference
        app:key="about"
        app:title="@string/about_app_title"
        />
    <Preference
        app:key="license"
        app:title="@string/license"
        android:summary="@string/rights_reserved"
        />
    <Preference
        app:key="privacy_policy"
        app:title="@string/privacy_policy"
        />
    <Preference
        app:key="submit_issue"
        app:title="@string/submit_issue"
        />
    <Preference
        app:key="share_logs"
        app:title="@string/share_logs"
        />
    <Preference
        app:key="device_id"
        app:title="@string/device_id"
        />
    <Preference
        app:key="contact"
        app:title="@string/contact_us"
        />
    <Preference
        app:key="translate"
        app:title="@string/translate_title"
        android:summary="@string/translate_summary"
        />
    <Preference
        app:key="open_source"
        app:title="@string/open_source_licenses"
        />
    <Preference
        app:key="subscription_status"
        app:title="@string/subscription_status"
        />
</PreferenceScreen>