<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        app:key="appearance"
        app:title="@string/appearance"
        android:summary="@string/appearance_summary"
        app:icon="@drawable/ic_pref_appearance"
        />
    <Preference
        app:key="analysis"
        app:title="@string/analysis"
        android:summary="@string/analysis_hint"
        app:icon="@drawable/ic_pref_analysis"
        />
    <Preference
        app:key="image_viewer"
        app:title="@string/image_viewer_normal"
        android:summary="@string/image_viewer_hint"
        app:icon="@drawable/ic_header_image"
        />
    <Preference
        app:key="audio_player"
        app:title="@string/audio_player"
        android:summary="@string/audio_player_hint"
        app:icon="@drawable/ic_header_audio"
        />
    <Preference
        app:key="trash_bin"
        app:title="@string/trash_bin"
        android:summary="@string/trash_bin_summary"
        app:icon="@drawable/ic_header_trash"
        />
</PreferenceScreen>