<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_blue"
    >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:descendantFocusability="afterDescendants"
            >

            <TextView
                android:id="@+id/errorSorryView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sorry_string"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/messageWhatHappenedView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/what_happened_headline"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/errorMessageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_labels"
                android:textColor="?attr/colorAccent" />

            <TextView
                android:id="@+id/errorDeviceHeadlineView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/what_device_headline"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/errorInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/errorInfoLabelsView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_labels"
                    android:textColor="?attr/colorAccent" />

                <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp">

                    <TextView
                        android:id="@+id/errorInfosView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"/>

                </HorizontalScrollView>

            </LinearLayout>

            <TextView
                android:id="@+id/errorYourComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/your_comment"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/errorCommentBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType=""
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/errorDetailView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/error_details_headline"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/errorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:typeface="monospace"
                    android:textColor="@color/white" />
            </HorizontalScrollView>

            <Button
                android:id="@+id/errorReportCopyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/material_generic"
                app:backgroundTint="@color/white"
                android:textColor="@color/navy_blue"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/copy_for_github"
                />

            <Button
                android:id="@+id/errorReportTelegramButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/material_generic"
                app:backgroundTint="@color/white"
                android:textColor="@color/navy_blue"
                android:text="@string/error_report_button_telegram" />

            <Button
                android:id="@+id/errorReportEmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/material_generic"
                app:backgroundTint="@color/white"
                android:textColor="@color/navy_blue"
                android:text="@string/error_report_button_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/error_report_open_github_notice"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/errorReportGitHubButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/material_generic"
                app:backgroundTint="@color/white"
                android:textColor="@color/navy_blue"
                android:text="@string/error_report_open_issue_button_text" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>