<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/material_generic"
    android:paddingEnd="@dimen/material_generic"
    android:paddingBottom="@dimen/material_generic"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/compression_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compress_message"
        android:textSize="@dimen/eighteen_sp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/material_generic"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compression_quality_title"
        android:textSize="@dimen/eighteen_sp"
        android:textColor="@color/white"
        />
    <Spinner
        android:id="@+id/quality_selection_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        app:layout_constraintTop_toBottomOf="@id/movie_name_edit_text"
        app:layout_constraintRight_toRightOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />

    <CheckBox
        android:id="@+id/disable_audio_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/compression_slider_value"
        android:layout_marginTop="@dimen/material_generic"
        android:text="@string/compress_disable_audio"
        android:textColor="@color/white"
        />
    <CheckBox
        android:id="@+id/delete_original_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/compression_slider_value"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/compression_delete_original"
        android:textColor="@color/white"
        />
</LinearLayout>